[workspace]
members = [
    "boiler_core",
    "boiler_macros",
    "boiler_cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
readme = "README.md"
repository = "https://github.com/m4tx/boiler.git"
homepage = "https://github.com/m4tx/boiler"
license = "MIT"
edition = "2021"
rust-version = "1.73.0"

[profile.release]
codegen-units = 1
lto = true

[workspace.dependencies]
anyhow = "1.0.95"
boiler_core = { path = "boiler_core", version = "0.1.0" }
boiler_macros = { path = "boiler_macros", version = "0.1.0" }
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
shadow-rs = "0.28.0"
