[package]
name = "boiler"
version = "0.1.0"
description = "TODO"
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
readme = "../README.md"
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anstream = "0.6.11"
anyhow = "1.0.79"
boiler_macros = { path = "../boiler-macros" }
chrono = "0.4.31"
clap = { version = "4.4.17", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
comrak = "0.21.0"
env_logger = "0.11.0"
gix = { version = "0.58.0", features = ["basic"] }
ignore = "0.4.22"
log = "0.4.20"
markdown = "1.0.0-alpha.16"
once_cell = "1.19.0"
regex = "1.10.2"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
tera = "1.19.1"
thiserror = "1.0.56"
toml = "0.8.8"
