[package]
name = "boiler"
description = "Highly opinionated CLI tool for creating and updating boilerplate files for your projects"
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anstream = "0.6.18"
anyhow.workspace = true
boiler_core.workspace = true
clap = { version = "4.5.21", features = ["derive"] }
clap-verbosity-flag = "2.2.2"
color-print = "0.3.7"
env_logger = "0.11.5"
log.workspace = true
shadow-rs.workspace = true

[build-dependencies]
shadow-rs.workspace = true
