[package]
name = "boiler"
description = "Highly opinionated CLI tool for creating and updating boilerplate files for your projects"
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
boiler_core.workspace = true
clap = { version = "4.5.48", features = ["derive", "string"] }
clap-verbosity-flag = "3.0.4"
color-print = "0.3.7"
env_logger = "0.11.8"
log.workspace = true
shadow-rs.workspace = true

[build-dependencies]
shadow-rs.workspace = true
