[package]
name = "boiler_core"
description = "Highly opinionated CLI tool for creating and updating boilerplate files for your projects - core library"
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
boiler_macros.workspace = true
chrono = "0.4.40"
comrak = "0.37.0"
gix = { version = "0.70.0", features = ["basic"] }
ignore = "0.4.23"
log = "0.4.27"
once_cell = "1.21.3"
path-slash = "0.2.1"
regex = "1.11.1"
serde.workspace = true
serde_yaml = "0.9.34"
tera = "1.20.0"
thiserror = "2.0.12"
toml = "0.8.20"

[dev-dependencies]
assert_fs = "1.1.2"
