[package]
name = "boiler_core"
description = "Highly opinionated CLI tool for creating and updating boilerplate files for your projects - core library"
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
boiler_macros.workspace = true
chrono = "0.4.42"
gix = { version = "0.75.0", features = ["basic"] }
ignore = "0.4.25"
log = "0.4.28"
once_cell = "1.21.3"
path-slash = "0.2.1"
regex = "1.12.2"
serde.workspace = true
serde_yaml = "0.9.34"
tera = "1.20.1"
thiserror = "2.0.17"
toml = "0.9.8"

[dev-dependencies]
assert_fs = "1.1.3"
