[package]
name = "boiler_macros"
version = "0.1.0"
description = "TODO"
categories = ["development-tools"]
authors = ["Mateusz Maćkowski <mateusz@mackowski.org>"]
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/compile_tests.rs"

[dependencies]
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.78"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.21"
syn = { version = "2.0.48", features = ["full"] }

[dev-dependencies]
boiler_core = { path = "../boiler_core" }
serde.workspace = true
trybuild = { version = "1.0.64", features = ["diff"] }
