[package]
name = "boiler_macros"
description = "Highly opinionated CLI tool for creating and updating boilerplate files for your projects - procedural macros"
categories = ["development-tools"]
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/compile_tests.rs"

[dependencies]
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.79"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.21"
syn = { version = "2.0.57", features = ["full"] }

[dev-dependencies]
boiler_core.workspace = true
serde.workspace = true
trybuild = { version = "1.0.91", features = ["diff"] }
